Created to read list

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --secondary-font: 'Lato', sans-serif;
+    --primary-font: 'Prata', serif;
+    --main-dark-color: #4b4b4b;
+    --main-light-color: #fff;
+    --accent-color: #d4ddff;
+    --background-color: #f8f8f8;
+    --background-row-color: #d3eaff;
+    --error-red: #ff0000;
+}
+
+img {
+    display: block;
+    height: auto;
+}
+
+body {
+    min-width: 375px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.container {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    padding: 0 24px;
+}
